--- a/matrix-admin-package-full/HTML/index.html
+++ b/matrix-admin-package-full/HTML/index.html
@@ -17,7 +17,7 @@
 
 <!--Header-part-->
 <div id="header">
-  <h1><a href="dashboard.html">Matrix Admin</a></h1>
+  <h1><a href="dashboard.html">SOD</a></h1>
 </div>
 <!--close-Header-part--> 
 
